--- a/client/src/components/Header/Header.module.sass
+++ b/client/src/components/Header/Header.module.sass
@@ -1,4 +1,3 @@
-
 .headerContainer
   display: flex
   flex-direction: column
@@ -42,85 +41,9 @@
       @media(max-width: 750px)
         align-items: center
         flex-direction: column
-
-      .nav
-        display: flex
-
-        ul
-          margin: 0
-          list-style: none
-          display: flex
-          justify-content: flex-start
-          align-items: center
-          @media(max-width: 920px)
-            padding: 0
-          @media(max-width: 700px)
-            flex-direction: column
-            align-items: flex-start
-
-          &:last-child li
-            ul
-              width: 200px
-
-          li
-            display: flex
-            align-items: center
-            justify-content: flex-start
-            margin-right: 30px
-            @media(max-width: 700px)
-              width: 100%
-              padding: 0 15px
-
-            &:hover
-              span
-                color: #f27e51
-
-              ul
-                display: block
-                position: absolute
-                border: 1px solid #eee
-                z-index: 1000
-                top: 130px
-                background-color: white
-                @media(max-width: 700px)
-                  top: auto
-                  left: 145px
-
-            ul
-              padding: 0
-              margin: 0
-              width: 160px
-              display: none
-
-              .last
-                width: 100%
-                padding-top: 8px
-                box-sizing: border-box
-                border-top: 1px solid aquamarine
-
-              li
-                box-sizing: border-box
-                width: 100%
-                padding: 10px 15px
-                display: flex
-                justify-content: flex-start
-
-                &:hover
-                  background: #f9fafb
-
-                a
-                  font-size: 12px
-                  text-decoration: none
-                  color: #333
-
-                  &:hover
-                    color: #f27e51
-
-            span
-              color: #495d8b
-              font-size: 15px
-              font-weight: 300
-              padding: 15px 0
+        
+    .nav
+      display: flex
 
   .loginSignnUpHeaders
     margin-top: 30px
@@ -204,7 +127,7 @@
         border-right: 1px solid #ebebeb
 
     .numberContainer
-      text-decoration: none
+      text-decoration: none //TODO test if needed
       color: inherit
       display: flex
       justify-content: center
@@ -220,7 +143,8 @@
         padding: 0 5px
         margin-left: 0
 
-      span
+      a
+        text-decoration: none
         color: #337ab7
         font-size: 14px
         margin-left: 10px
