--- a/client/src/components/NavBarList/NavBarList.module.sass
+++ b/client/src/components/NavBarList/NavBarList.module.sass
@@ -50,7 +50,6 @@ ul
         text-transform: uppercase
         box-sizing: border-box
         width: 100%
-        padding: 10px 15px
         display: flex
         justify-content: flex-start
         &:hover
@@ -61,6 +60,10 @@ ul
           box-sizing: border-box
           border-top: 1px solid aquamarine
         a
+          // display: inline-block
+          padding: 10px 15px
+          width: 100%
+          height: 100%
           font-size: 12px
           text-decoration: none
           color: #333
