--- a/client/src/pages/LoginPage/LoginPage.module.sass
+++ b/client/src/pages/LoginPage/LoginPage.module.sass
@@ -3,15 +3,21 @@
   display: flex
   justify-content: center
   align-items: flex-start
-  padding-top: 40px
+  // padding-top: 40px
   height: 100vh
 
 .loginContainer
   background-color: #3ea9f5
   min-width: 300px
-  width: 1200px
-  display: flex
-  flex-direction: column
+  // width: 1200px
+  // display: flex
+  // flex-direction: column
+
+  width: 72%
+  padding: 20px
+  min-width: 280px
+  min-height: 650px
+  padding-top: 40px
 
 .loginFormContainer
   display: flex
@@ -26,8 +32,7 @@
   justify-content: space-between
   align-items: center
   margin-top: 26px
-  padding-left: 45px
-  padding-right: 100px
+  padding: 0 60px 0 45px 
   @media (max-width: 530px)
     padding-right: 45px
   a
