--- a/client/src/components/NavBarList/NavBarList.module.sass
+++ b/client/src/components/NavBarList/NavBarList.module.sass
@@ -1,20 +1,15 @@
-ul
+.navList
+  box-sizing: border-box
   margin: 0
   list-style: none
   display: flex
   justify-content: flex-start
   align-items: center
-  @media(max-width: 920px)
-    padding: 0
   @media(max-width: 700px)
     flex-direction: column
     align-items: flex-start
 
-  &:last-child li
-    ul
-      width: 200px
-
-  li
+  &>li
     display: flex
     align-items: center
     justify-content: flex-start
@@ -23,48 +18,53 @@ ul
       width: 100%
       padding: 0 15px
     span
-      text-transform: capitalize
       color: #495d8b
+      text-transform: capitalize
       font-size: 15px
       font-weight: 300
       padding: 15px 0
     &:hover
       span
         color: #f27e51
-      ul
+      .dropDownList
         display: block
-        position: absolute
-        border: 1px solid #eee
-        z-index: 1000
-        top: 130px
-        background-color: white
-        @media(max-width: 700px)
-          top: auto
-          left: 145px
-    ul
-      padding: 0
-      margin: 0
-      width: 160px
-      display: none
-      li
-        text-transform: uppercase
-        box-sizing: border-box
-        width: 100%
-        display: flex
-        justify-content: flex-start
-        &:hover
-          background: #f9fafb
-        &:last-child
-          width: 100%
-          padding-top: 8px
-          box-sizing: border-box
-          border-top: 1px solid aquamarine
-        a
-          padding: 10px 15px
-          width: 100%
-          height: 100%
-          font-size: 12px
-          text-decoration: none
-          color: #333
-          &:hover
-            color: #f27e51
+
+  &:last-child li
+    .dropDownList
+      width: 200px
+
+.dropDownList
+  padding: 0
+  margin: 0
+  width: 160px
+  display: none
+
+  position: absolute
+  background-color: white
+  border: 1px solid #eee
+  z-index: 1000
+  top: 130px
+  @media(max-width: 700px)
+    top: auto
+    left: 145px
+  li
+    text-transform: uppercase
+    width: 100%
+    display: flex
+    justify-content: flex-start
+    &:hover
+      background: #f9fafb
+    &:last-child
+      width: 100%
+      padding-top: 8px
+      border-top: 1px solid aquamarine
+    a
+      padding: 10px 15px
+      width: 100%
+      height: 100%
+      font-size: 12px
+      text-decoration: none
+      color: #333
+      &:hover
+        color: #f27e51
+
