price-almost-finished

--- a/client/src/components/Header/Header.module.sass
+++ b/client/src/components/Header/Header.module.sass
@@ -117,4 +117,10 @@
       letter-spacing: 0.3px
       color: lightyellow
       text-decoration: underline
-
+  
+.btn
+  padding: 0 15px
+  color: #718888
+  font-weight: 400
+  font-size: 14px
+  border-right: 1px solid #ebebeb
