--- a/client/src/components/PriceOptionsList/PriceOptionsItem/InfoTextItems/InfoTextItems.module.sass
+++ b/client/src/components/PriceOptionsList/PriceOptionsItem/InfoTextItems/InfoTextItems.module.sass
@@ -9,5 +9,9 @@
       margin-top: 10px
 
 .infoListItem
-  padding: 13px 0 0 15px
+  padding: 13px 0 2px 15px
   font-size: 13px
+  .listIcon
+    font-size: 12px
+    margin-right: 5px 
+    margin-bottom: -2px
