--- a/client/src/components/PriceOptionsList/PriceOptionsList.module.sass
+++ b/client/src/components/PriceOptionsList/PriceOptionsList.module.sass
@@ -1,4 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap')
+
 .PriceItemsContainer
+  font-family: Raleway, sans-serif
   list-style: none
   padding: 20px
   box-sizing: border-box
