--- a/client/src/components/PriceOptionsList/PriceOptionsItem/PriceOptionsItem.module.sass
+++ b/client/src/components/PriceOptionsList/PriceOptionsItem/PriceOptionsItem.module.sass
@@ -9,6 +9,11 @@ $managed:#28d2d0
   width:25%
   line-height: 1.5
   font-weight: 500
+  @media screen and (max-width: 768px)
+    width:40%
+    margin: 0 auto
+    & + .pricingItem
+      margin-top: 30px
   &:hover .pricingBox
     box-shadow: 0 10px 10px #6f6f6f
     opacity: 1
@@ -45,7 +50,7 @@ $managed:#28d2d0
     .title
       color: $managed
     .price
-      color: $managed
+      color: $platinum
     .pricingBox
       border-color: $managed
     
@@ -71,10 +76,15 @@ $managed:#28d2d0
   font-weight: bold
   margin-bottom: 10px
   line-height: 1
+  @media screen and (max-width: 1024px)
+    font-size: 30px
+  @media screen and (max-width: 768px)
+    font-size: 33px
 
 .boxText
   color: #666
   width: 100%
+
 
 .price
   color: black
@@ -95,3 +105,7 @@ $managed:#28d2d0
   display: flex
   flex-direction: column
   justify-content: space-between
+  @media screen and (max-width: 1024px)
+    min-height: 210px
+  @media screen and (max-width: 768px)
+    min-height: 160px
