--- a/client/src/components/PriceOptionsList/PriceOptionsList.module.sass
+++ b/client/src/components/PriceOptionsList/PriceOptionsList.module.sass
@@ -1,13 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap')
-
+  
 .PriceItemsContainer
-  font-family: Raleway, sans-serif
   list-style: none
   padding: 20px
   box-sizing: border-box
   max-width: 1150px
   margin: 0 auto
-
+  font-family: Raleway, sans-serif
   display: flex
   justify-content: space-evenly
   gap: 20px
+  @media screen and (max-width: 768px)
+    flex-direction: column
