--- a/client/src/components/PricingForSelector/PricingForSelector.module.sass
+++ b/client/src/components/PricingForSelector/PricingForSelector.module.sass
@@ -8,19 +8,47 @@
   font-weight: 700
   color: #555
   padding: 40px 15px 50px 40px
-  // label
-  //   display: flex
+  label
+    display: flex
+    align-items: center
+    gap: 15px
 
 .priceSelector
-  display: inline-block
-  margin-left: 15px 
+  width: max-content
+  position: relative
   select
+    cursor: pointer
     color: white
     font-weight: inherit
-    background-color: #28d2d0
-    cursor: pointer
-    padding: 0 15px
-    max-width: 250px
-    border-radius: 4px
     border: 1px solid #bfbfbf
-    padding: 5px 10px 
+    border-radius: 4px
+    width: auto
+    max-width: 400px
+    overflow: hidden
+    white-space: nowrap
+    text-overflow: ellipsis
+    padding: 5px 10px
+    option
+      font-size: 15px
+      color: #666
+      padding: 5px 0
+      background-color: white
+
+
+    -moz-appearance: none
+    -webkit-appearance: none
+    appearance: none
+    background-color: #28d2d0
+  &::after
+    font-size: 30px
+    position: absolute
+    z-index: 100
+    top: 50%
+    right: 30px
+    transform: translateY(-50%)
+    color: white
+    font-family: "Font Awesome 5 Free"
+    content: "\f078"
+    display: inline-block
+    padding-right: 3px
+    width: 12px
