little style fix

--- a/client/src/components/PricingForSelector/PricingForSelector.module.sass
+++ b/client/src/components/PricingForSelector/PricingForSelector.module.sass
@@ -40,15 +40,12 @@
     appearance: none
     background-color: #28d2d0
   &::after
-    font-size: 30px
-    position: absolute
-    z-index: 100
-    top: 50%
-    right: 30px
-    transform: translateY(-50%)
     color: white
+    font-size: 30px
+    display: inline-block
     font-family: "Font Awesome 5 Free"
     content: "\f078"
-    display: inline-block
-    padding-right: 3px
-    width: 12px
+    position: absolute
+    top: 50%
+    right: 0
+    transform: translate(-100%, -50%)
